improve examples